# depthai-core-example

./: .clang-format  CMakeLists.txt  xyz.txt
src/: main.cpp
